--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@
 	border-width: 1px;
 }
 
+.col-xs-2 {
+	border-color: orange;
+	border-style: solid;
+	border-width: 1px;
+}
+
 .cell {
 	margin: 10px;
 	height: 70px;
