--- a/style.css
+++ b/style.css
@@ -1,28 +1,28 @@
 .container {
-	border-color: red;
+/*	border-color: red;
 	border-style: solid;
-	border-width: 1px;
+	border-width: 1px;*/
+	width: 750px;
 }
 
 
 .row {
-	border-color: blue;
+	/*border-color: blue;
 	border-style: solid;
-	border-width: 1px;
+	border-width: 1px;*/
 	text-align: center;
+	max-width: 800px;
 }
 
 .col-xs-1 {
 	border-color: orange;
 	border-style: solid;
 	border-width: 1px;
+	height: 54px;
+	text-align: center;
+	padding-top: 2px;
 }
 
-.col-xs-2 {
-	border-color: orange;
-	border-style: solid;
-	border-width: 1px;
-}
 
 .cell {
 	margin: 10px;
@@ -34,11 +34,13 @@
 }
 
 .buttonsPlay {
-	border-color: orange;
+/*	border-color: orange;
 	border-style: solid;
-	border-width: 1px;
+	border-width: 1px;*/
 	height: 100px;
-	padding-top: 30px;
+	padding-top: 15px;
+	background-color: #FFD58E;
+
 }
 
 .pOne {
@@ -47,5 +49,53 @@
 	border-width: 1px;
 }
 
+.title {
+	text-align: center;
+	background-color: #F3C07A;
+	width: 750px;
+	margin-top: 20px;
+}
 
+#gameBoardRow {
+	height: 370px;
+	width: 450px;
+	padding-left: 50px;
+	background-color: #F3FFC2;
+	margin-left: 140px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
 
+#scoreBoardRow {
+	border-color: orange;
+	border-style: solid;
+	border-width: 1px;
+}
+
+#bottomRow {
+	background-color: #FFE38E;
+}
+
+.pOne {
+	background-color:  ;
+}
+
+.pTwo {
+	background-color: ;
+}
+
+ul {
+	list-style-type: none;
+}
+
+.instructPlay {
+	padding: 8px;
+}
+
+.main {
+	border-style: double;
+	border-color: black;
+	border-width: 5px;
+	width: 800px;
+	height: 690px;
+}
