--- a/style.css
+++ b/style.css
@@ -73,10 +73,12 @@
 	border-color: orange;
 	border-style: solid;
 	border-width: 1px;
+	
 }
 
 #bottomRow {
 	background-color: #FFE38E;
+	border-radius: 15px;
 }
 
 .pOne {
